--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+tags
+tag
+.tag
+.tags
+
 # compiled output
 dist
 tmp
