--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@nx/js": "16.0.1",
     "@nx/linter": "16.0.1",
     "@nx/react": "16.0.1",
+    "@nx/storybook": "^16.0.1",
+    "@nx/vite": "16.0.1",
     "@nx/workspace": "16.0.1",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/core-common": "^6.5.15",
+    "@storybook/core-server": "^7.0.2",
+    "@storybook/react-vite": "^7.0.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
@@ -26,6 +32,8 @@
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/ui": "^0.25.8",
     "babel-jest": "^29.4.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -38,11 +46,17 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "~20.0.3",
     "nx": "16.0.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
