--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@nx/next": "16.0.1",
+    "@tremor/react": "^2.4.0",
+    "js-cookie": "^3.0.5",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,11 +26,13 @@
     "@nx/vite": "16.0.1",
     "@nx/workspace": "16.0.1",
     "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-styling": "^1.0.5",
     "@storybook/core-common": "^6.5.15",
     "@storybook/core-server": "^7.0.2",
     "@storybook/react-vite": "^7.0.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -34,6 +40,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/ui": "^0.25.8",
+    "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -48,8 +55,10 @@
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~20.0.3",
     "nx": "16.0.1",
+    "postcss": "^8.4.23",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
