--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.0.17",
     "@nx/next": "16.0.1",
     "@tremor/react": "^2.4.0",
+    "firebase": "^9.21.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.0",
     "react": "18.2.0",
