feat: add diet login

--- a/libs/auth-client/tsconfig.lib.json
+++ b/libs/auth-client/tsconfig.lib.json
@@ -1,10 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": [ "node" ]
+    "types": [ "node" ],
+    "jsx": "react","
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "exclude": [
     "jest.config.ts",
