fix: auth-client tsconfig.lib.json syntax error

--- a/libs/auth-client/tsconfig.lib.json
+++ b/libs/auth-client/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "types": [ "node" ],
-    "jsx": "react","
+    "jsx": "react"
   },
   "include": [
     "**/*.ts",
