--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@heroicons/react": "^2.0.17",
     "@nx/next": "16.0.1",
     "@tremor/react": "^2.4.0",
+    "@vercel/analytics": "^1.0.1",
     "firebase": "^9.21.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.0",
+    "next-axiom": "^0.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
