--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@nx/next": "16.0.1",
+    "@tanstack/react-query": "^4.29.5",
     "@tremor/react": "^2.4.0",
     "@vercel/analytics": "^1.0.1",
     "firebase": "^9.21.0",
@@ -33,6 +34,7 @@
     "@storybook/core-common": "^6.5.15",
     "@storybook/core-server": "^7.0.2",
     "@storybook/react-vite": "^7.0.2",
+    "@tanstack/eslint-plugin-query": "^4.29.4",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/js-cookie": "^3.0.3",
