--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@nx/next": "16.0.1",
+    "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.29.5",
     "@tremor/react": "^2.4.0",
     "@vercel/analytics": "^1.0.1",
@@ -17,6 +18,7 @@
     "next-axiom": "^0.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.8.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -34,6 +36,8 @@
     "@storybook/core-common": "^6.5.15",
     "@storybook/core-server": "^7.0.2",
     "@storybook/react-vite": "^7.0.2",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
     "@tanstack/eslint-plugin-query": "^4.29.4",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
@@ -41,9 +45,11 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
