--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
-name: Test Firestore on push to master
+name: Test firestore on push to master or main
 'on':
   push:
     branches:
       - master
       - main
 jobs:
-  test_rules:
-    runs_on: ubuntu-latest
+  test-firestore:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
