feat: add yarn scripts

--- a/apps/diet/project.json
+++ b/apps/diet/project.json
@@ -37,6 +37,9 @@
         }
       }
     },
+    "type-check": {
+      "command": "tsc -b ./apps/diet/tsconfig.json --incremental --pretty"
+    },
     "export": {
       "executor": "@nx/next:export",
       "options": {
