--- a/libs/auth-client/project.json
+++ b/libs/auth-client/project.json
@@ -12,6 +12,9 @@
         "lintFilePatterns": ["libs/auth-client/**/*.ts"]
       }
     },
+    "type-check": {
+      "command": "tsc -b ./libs/auth-client/tsconfig.json --incremental --pretty"
+    },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
