--- a/libs/common/project.json
+++ b/libs/common/project.json
@@ -12,6 +12,9 @@
         "lintFilePatterns": ["libs/common/**/*.ts"]
       }
     },
+    "type-check": {
+      "command": "tsc -b ./libs/common/tsconfig.json --incremental --pretty"
+    },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
