--- a/libs/diet-server/project.json
+++ b/libs/diet-server/project.json
@@ -12,6 +12,9 @@
         "lintFilePatterns": ["libs/diet-server/**/*.ts"]
       }
     },
+    "type-check": {
+      "command": "tsc -b ./libs/diet-server/tsconfig.json --incremental --pretty"
+    },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
