--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "scripts":{
+    "dev": "nx run-many --target=serve --projects=diet",
+    "build": "nx run-many --target=build --parallel",
+    "test": "nx run-many --target=test --exclude=workspace --parallel",
+    "lint": "nx run-many --target=lint --parallel --exclude=workspace",
+    "type-check": "nx run-many --target=type-check --parallel --exclude=workspace"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
