--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 .env
 
+**/firestore-debug.log
+**/*.tsbuildinfo
+
 tags
 tag
 .tag
