--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nx run-many --target=build --parallel",
     "test": "nx run-many --target=test --exclude=workspace --parallel",
     "lint": "nx run-many --target=lint --parallel --exclude=workspace",
-    "type-check": "nx run-many --target=type-check --parallel --exclude=workspace"
+    "type-check": "nx run-many --target=type-check --parallel --exclude=workspace",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +31,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@nx/cypress": "16.0.1",
     "@nx/eslint-plugin": "16.0.1",
     "@nx/jest": "16.0.1",
@@ -72,6 +75,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~20.0.3",
