--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "private": true,
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@nx/next": "16.0.1",
