--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@/common/*": ["libs/common/src/*"],
       "@/diet-server/*": ["libs/diet-server/src/*"],
       "@/withings/*": ["libs/withings/src/*"],
+      "@/withings-client/*": ["libs/withings-client/src/*"],
       "@/ui/*": ["libs/ui/src/*"],
       "@/diet/*": ["apps/diet/*"],
       "@/test-app/*": ["apps/test-app/*"]
