refactor: refactor withings and withings-client

--- a/libs/withings-client/tsconfig.json
+++ b/libs/withings-client/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "../../dist/out-tsc",
     "declaration": true,
     "esModuleInterop": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
   "files": [],
   "include": [],
