--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nx/next": "16.0.1",
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^4.29.13",
     "@tremor/react": "^2.4.0",
     "@vercel/analytics": "^1.0.1",
     "firebase": "^9.21.0",
