--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@/oura/*": ["libs/oura/src/*"],
       "@/oura-client/*": ["libs/oura-client/src/*"],
       "@/ui/*": ["libs/ui/src/*"],
+      "@/oda-scraper/*": ["libs/oda-scraper/src/*"],
       "@/diet/*": ["apps/diet/*"],
       "@/test-app/*": ["apps/test-app/*"]
     }
