--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "nx run-many --target=test --exclude=workspace --parallel",
     "lint": "nx run-many --target=lint --parallel --exclude=workspace",
     "type-check": "nx run-many --target=type-check --parallel --exclude=workspace",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "oda-scrape": "nx run oda-scraper:scrape"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +29,7 @@
     "js-cookie": "^3.0.5",
     "next": "13.3.0",
     "next-axiom": "^0.17.0",
+    "puppeteer": "^20.7.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.8.1",
@@ -91,6 +93,7 @@
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~4.9.5",
     "vite": "^4.0.1",
     "vite-plugin-dts": "~1.7.1",
