--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "nx run-many --target=lint --parallel --exclude=workspace",
     "type-check": "nx run-many --target=type-check --parallel --exclude=workspace",
     "prepare": "husky install",
-    "oda-scrape": "nx run oda-scraper:scrape"
+    "oda-scrape": "nx run oda-scraper:scrape",
+    "oda-search": "nx run oda-scraper:search"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@tremor/react": "^2.4.0",
     "@vercel/analytics": "^1.0.1",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.9.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.0",
     "next-axiom": "^0.17.0",
