--- a/libs/oda-scraper/project.json
+++ b/libs/oda-scraper/project.json
@@ -29,5 +29,8 @@
     "search": {
       "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/searchScript.ts"
     },
+    "search-REPL": {
+      "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/searchREPL.ts"
+    },
   }
 }
