--- a/libs/oda-scraper/project.json
+++ b/libs/oda-scraper/project.json
@@ -24,10 +24,13 @@
       }
     },
     "scrape": {
-      "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/scraper.ts"
+      "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/scripts/scraper.ts"
     },
     "search": {
-      "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/searchScript.ts"
+      "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/scripts/searchScript.ts"
     },
+    "normalize": {
+      "command": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/scripts/parseToStockItems.ts"
+    }
   }
 }
