--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "oda-scrape": "nx run oda-scraper:scrape",
     "oda-search": "nx run oda-scraper:search",
     "oda-repl": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/scripts/searchREPL.ts",
-    "oda-normalize": "nx run oda-scraper:normalize"
+    "foodtable-normalize": "nx run foodtable-scraper:normalize",
+    "foodtable-scrape": "nx run foodtable-scraper:scrape",
+    "foodtable-search": "nx run foodtable-scraper:search",
+    "foodtable-repl": "ts-node -r tsconfig-paths/register --project ./libs/foodtable-scraper/tsconfig.json ./libs/foodtable-scraper/src/scripts/searchREPL.ts"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +31,7 @@
     "@tanstack/react-query-devtools": "^4.29.13",
     "@tremor/react": "^3.6.0",
     "@vercel/analytics": "^1.0.1",
+    "csv-parser": "^3.0.0",
     "firebase": "^9.21.0",
     "firebase-admin": "^11.9.0",
     "js-cookie": "^3.0.5",
@@ -40,7 +44,8 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.8.1",
     "tslib": "^2.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
