fix: type-check fix

--- a/libs/common-scraper/tsconfig.lib.json
+++ b/libs/common-scraper/tsconfig.lib.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": [ "node" ],
-    "lib": [ "esnext", "dom" ]
+    "types": [ "node" ]
   },
   "include": [
     "**/*.ts"
