--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "nx run-many --target=lint --parallel --exclude=workspace",
     "type-check": "nx run-many --target=type-check --parallel --exclude=workspace",
     "prepare": "husky install",
-    "ui": "nx run ui:storybook",
+    "ui:dev": "nx run ui:storybook",
+    "ui:build": "nx run ui:build-storybook",
     "oda-scrape": "nx run oda-scraper:scrape",
     "oda-search": "nx run oda-scraper:search",
     "oda-repl": "ts-node -r tsconfig-paths/register --project ./libs/oda-scraper/tsconfig.json ./libs/oda-scraper/src/scripts/searchREPL.ts",
