--- a/libs/common-client/tsconfig.json
+++ b/libs/common-client/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "jsx": "react"
   },
   "files": [],
   "include": [],
