--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash.throttle": "^4.1.1",
     "next": "13.3.0",
     "next-axiom": "^0.17.0",
+    "openai": "^4.7.1",
     "puppeteer": "^20.7.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
